// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`components/BorderWrapper > should render 1`] = `
<div
  class="border-all"
>
  
  
</div>
`;

exports[`components/BorderWrapper > should render without child 1`] = `
<div
  class="border-all"
>
  
  <div>
    Child Element
  </div>
  
</div>
`;
